Fixed not fully visible on smartphones😄

--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,14 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
+#root {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 1rem;
+}
+
 .container {
   margin: 30px auto;
-  width: 400px;
+  width: 350px;
 }
 
 h1 {
@@ -130,6 +135,7 @@ input[type='number'] {
   position: relative;
   padding: 10px;
   margin: 10px 0;
+  transition: transform 300ms ease;
 }
 
 .list li.plus {
@@ -142,12 +148,10 @@ input[type='number'] {
 
 .delete-btn {
   cursor: pointer;
-  background-color: #e74c3c;
   border: 0;
-  color: #fff;
-  font-size: 20px;
-  line-height: 20px;
-  padding: 2px 5px;
+  color: #db2915;
+  background: none;
+  margin-top: 2px;
   position: absolute;
   top: 50%;
   left: 0;
@@ -155,7 +159,13 @@ input[type='number'] {
   opacity: 0;
   transition: opacity 0.3s ease;
 }
-
+.delete-btn > svg {
+  height: 1rem;
+  width: 1rem;
+}
+.list li:hover {
+  transform: translateX(1rem);
+}
 .list li:hover .delete-btn {
   opacity: 1;
 }
@@ -220,4 +230,11 @@ input[type='number'] {
 
 .login__github-button:focus {
   outline: 0;
+}
+
+@media all and (max-width: 768px) {
+  #root {
+    padding: unset;
+    box-shadow: none;
+  }
 }
